--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  mockito: ^5.4.4
+  firebase_auth_mocks: ^0.13.0
+  firebase_core: any
   flutter_test:
     sdk: flutter
 
