--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,49 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^2.27.0
-  firebase_auth: ^4.17.0
+  firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.15.7
+  auto_size_text: 3.0.0
+  cached_network_image: 3.4.1
+  cached_network_image_platform_interface: 4.1.1
+  cached_network_image_web: 1.3.1
+  collection: ^1.19.1
+  flutter_animate: 4.5.0
+  flutter_cache_manager: 3.4.1
+  font_awesome_flutter: 10.7.0
+  from_css_color: 2.0.0
+  go_router: 12.1.3
+  google_fonts: 6.1.0
+  intl: 0.19.0
+  json_path: 0.7.2
+  page_transition: 2.1.0
+  path_provider: 2.1.4
+  path_provider_android: 2.2.10
+  path_provider_foundation: 2.4.0
+  path_provider_linux: 2.2.1
+  path_provider_platform_interface: 2.1.2
+  path_provider_windows: 2.3.0
+  percent_indicator: 4.2.2
+  provider: 6.1.2
+  shared_preferences: 2.3.2
+  shared_preferences_android: 2.3.2
+  shared_preferences_foundation: 2.5.2
+  shared_preferences_linux: 2.4.1
+  shared_preferences_platform_interface: 2.4.1
+  shared_preferences_web: 2.4.2
+  shared_preferences_windows: 2.4.1
+  sqflite: 2.3.3+1
+  sqflite_common: 2.5.4+3
+  timeago: 3.6.1
+  url_launcher: 6.3.0
+  url_launcher_android: 6.3.10
+  url_launcher_ios: 6.3.1
+  url_launcher_linux: 3.2.0
+  url_launcher_macos: 3.2.1
+  url_launcher_platform_interface: 2.3.2
+  url_launcher_web: 2.3.3
+  url_launcher_windows: 3.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,7 +83,6 @@ dependencies:
 dev_dependencies:
   mockito: ^5.4.4
   firebase_auth_mocks: ^0.13.0
-  firebase_core: any
   flutter_test:
     sdk: flutter
 
@@ -64,7 +103,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+    - assets/videos/
+    - assets/audios/
+    - assets/rive_animations/
+    - assets/pdfs/
+    - assets/jsons/
+  
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
