--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,14 @@ dependencies:
   url_launcher_platform_interface: 2.3.2
   url_launcher_web: 2.3.3
   url_launcher_windows: 3.1.2
+  #untuk file upload, JANGAN UBAH KEDUDUKAN NI!
+  file_picker: ^8.1.4
+  image_picker: ^1.0.7
+  uuid: ^4.0.0
+  syncfusion_flutter_pdf: ^24.2.3
+  firebase_storage: ^11.6.5
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
