--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,13 +82,9 @@ dependencies:
   uuid: ^4.0.0
   syncfusion_flutter_pdf: ^24.2.3
   firebase_storage: ^11.6.5
-  syncfusion_flutter_pdfviewer: any #untuk view the pdf
-
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  #syncfusion_flutter_pdfviewer: ^24.2.8
+
 
 dev_dependencies:
   mockito: ^5.4.4
