--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,8 @@ dependencies:
   syncfusion_flutter_pdf: ^24.2.3
   firebase_storage: ^11.6.5
   cupertino_icons: ^1.0.8
-  #syncfusion_flutter_pdfviewer: ^24.2.8
+  pdfx: ^2.5.0
+  #syncfusion_flutter_pdfviewer: any
 
 
 dev_dependencies:
