--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   firebase_storage: ^11.6.5
   cupertino_icons: ^1.0.8
   pdfx: ^2.5.0
+  share_plus: ^7.2.1
   #syncfusion_flutter_pdfviewer: any
 
 
