--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_auth: ^4.16.0
   google_sign_in: ^6.2.1
   cloud_firestore: ^4.14.0
-  firebase_app_check: ^0.2.1+6
+  firebase_app_check: ^0.2.2
   #start sini semua pasal design for login page
   auto_size_text: 3.0.0
   cached_network_image: 3.4.1
